丰富工具类：新增反射工具类，新增类型转换器，新增字符编码处理