@@ -8,6 +8,7 @@
 package com.sand.base.util.http;
 
 import com.alibaba.fastjson.JSON;
+import com.sand.base.core.text.LsCharset;
 import com.sand.base.exception.LsException;
 import com.sand.base.util.lang3.StringUtil;
 import lombok.extern.slf4j.Slf4j;
@@ -71,7 +72,7 @@ public class OkHttp3Util {
         if (Objects.isNull(fileInfo)) {
           throw new LsException(response.body().string());
         }
-        fileName = URLDecoder.decode(fileInfo.split("=")[1], "utf-8");
+        fileName = URLDecoder.decode(fileInfo.split("=")[1], LsCharset.UTF_8);
         is = response.body().byteStream();
         // 监听接口处理文件名
         long total = response.body().contentLength();
